--- a/components.json
+++ b/components.json
@@ -21,6 +21,7 @@
   },
   "registries": {
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
-    "@magicui": "https://magicui.design/r/{name}"
+    "@magicui": "https://magicui.design/r/{name}",
+    "@scrollxui": "https://www.scrollxui.dev/registry/{name}.json"
   }
 }
